<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aluno.projetoz1k4.Avaliar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb1"
            android:numStars="5"
            android:stepSize="1"
            android:rating="3"
            android:isIndicator="false"
            android:layout_gravity="center"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#000"
            android:layout_gravity="center"
            android:text="@string/ContMemes"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp">

            <RadioButton
                android:id="@+id/r1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/PrimeiraOpcao"/>

            <RadioButton
                android:id="@+id/r2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/SegundaOpcao"/>

        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/TextMemes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#000"
            android:layout_gravity="center"
            android:text="@string/Conhece"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <CheckBox
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/Nome1"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:id="@+id/primeiro"/>

        <CheckBox
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/Nome3"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:id="@+id/segundo"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/TextProf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#FFF"
            android:background="#000"
            android:text="@string/BtnEnviar"
            android:onClick="verificar"
            android:layout_gravity="center"
            />

    </LinearLayout>

</ScrollView>
